@@ -68,7 +68,16 @@ HANDLER (upload_ok)
     log ("upload_ok(): %s notified server that %s may download \"%s\"",
 	    sender->nick, recip->nick, field[1]);
 
-    if (recip->con)
+    if (sender->port == 0)
+    {
+	/* firewalled user */
+	ASSERT (con->class == CLASS_USER);
+	send_cmd (con, MSG_SERVER_UPLOAD_FIREWALL /* 501 */,
+		"%s %lu %d \"%s\" %s %d",
+		recip->nick, recip->host, recip->port, field[1], hash,
+		recip->speed);
+    }
+    else if (recip->con)
     {
 	/* local connection */
 	send_cmd (recip->con, MSG_SERVER_FILE_READY /* 204 */,
